--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.17.7",
     "@sentry/nextjs": "^8.30.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.28",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
